@@ -9,11 +9,12 @@ pgxn.client -- main package
 __version__ = '0.1a3'
 
 
+import os
 import re
 import operator as _op
 
 from pgxn.client.i18n import _
-from pgxn.client.errors import BadSpecError
+from pgxn.client.errors import BadSpecError, ResourceNotFound
 
 from pgxn.utils.semver import SemVer
 from pgxn.utils.label import Label
@@ -33,10 +34,24 @@ class Spec(object):
         'testing': TESTING,
         'stable': STABLE, }
 
-    def __init__(self, name, op=None, ver=None):
+    def __init__(self, name=None, op=None, ver=None,
+            dirname=None, filename=None):
         self.name = name
         self.op = op
         self.ver = ver
+
+        # point to local files
+        self.dirname = dirname
+        self.filename = filename
+
+    def is_dir(self):
+        return self.dirname is not None
+
+    def is_file(self):
+        return self.filename is not None
+
+    def is_local(self):
+        return self.is_dir() or self.is_file()
 
     def __str__(self):
         if self.op is None:
@@ -46,11 +61,19 @@ class Spec(object):
 
     @classmethod
     def parse(self, spec):
-        """Parse a spec string and return name and version required.
+        """Parse a spec string into a populated Spec instance.
 
-        Return (name, op, version), op and version can be None.
         Raise BadSpecError if couldn't parse.
         """
+        if os.sep in spec:
+            # This is a local thing, let's see what
+            if os.path.isdir(spec):
+                return Spec(dirname=spec)
+            elif os.path.exists(spec):
+                return Spec(filename=spec)
+            else:
+                raise ResourceNotFound(_("cannot find '%s'") % spec)
+
         # split operator/version and name
         m = re.match(r'(.+?)(?:(==|=|>=|>|<=|<)(.*))?$', spec)
         if m is None:
